# sovereign-knowledge-compiler

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_compile.py
scripts/: build_demo_dataset.py  compile_blog_deep.py
skc-demo/: .gitignore  package-lock.json  package.json  tailwind.config.js
skc-demo/app/: globals.css  layout.tsx  page.tsx
skc-demo/components/: Dashboard.tsx  KnowledgeGraph3D.tsx
skc-demo/public/: dataset.json
src/sovereign_knowledge_compiler/: __init__.py  cli.py
src/sovereign_knowledge_compiler/artifacts/: __init__.py  types.py  writer.py
src/sovereign_knowledge_compiler/compiler/: __init__.py  consolidator.py  extractor.py  frontend.py  indexer.py  synthesizer.py
src/sovereign_knowledge_compiler/privacy/: __init__.py  guard.py
src/sovereign_knowledge_compiler/runtime/: __init__.py  api.py
src/sovereign_knowledge_compiler/sync/: __init__.py  compaction.py  crdt.py  memory_sync.py
tests/: test_compaction.py  test_compiler.py  test_sync.py  test_synthesis_decay_loop.py  test_synthesizer.py
